[tool.poetry]
name = "alogging"
version = "0.1.0"
description = "Async Logging for Python"
authors = ["Yury Sokov <me@yurzs.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.2.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
aiosmtpd = "^1.4.4.post2"
autoflake = "^2.2.1"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 99

[tool.black]
line_length = 99
target_version = ["py39"]

[tool.pylint]
target_versions = ["py39"]
max-line-length = 99

[tool.autoflake]
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
in-place = true
recursive = true

[tool.pytest]
asyncio-mode = true
